--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
             </div><!-- /.container -->
             <footer>
                 <ul>
-                    <li><a href="mailto:blanky@null.com">email</a></li>
+                    <li><a href="mailto:dylanflanders@ucla.edu">email</a></li>
                     <li><a href="https://github.com/DylanFlanders">github</a></li>
                 </ul>
             </footer>
